fix padding on mobile

--- a/resources/style.css
+++ b/resources/style.css
@@ -90,7 +90,7 @@ h1 {
 	height: 75%;
 	width: 100%;
 	position: absolute;
-    bottom:0px;
+	bottom: 0px;
 	margin: auto 0.5% auto 0.5%;
 }
 
@@ -98,7 +98,7 @@ h1 {
 	background: #00a0df;
 }
 
-#info {
+.info {
 	border: 3px solid white;
 	border-radius: 10px;
 	background-color: white;
